--- a/src/main/resources/view/login.fxml
+++ b/src/main/resources/view/login.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="427.0" prefWidth="722.0" style="-fx-background-color: #E9E9E9;" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="427.0" prefWidth="722.0" style="-fx-background-color: #E9E9E9;" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.LoginController">
    <children>
       <ImageView fx:id="loginImageImageView" fitHeight="366.0" fitWidth="317.0" layoutX="36.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -72,5 +72,6 @@
             <AnchorPane layoutX="6.0" layoutY="157.0" prefHeight="10.0" prefWidth="303.0" style="-fx-background-color: #FFFFFF;" />
          </children>
       </AnchorPane>
+      <Label layoutX="36.0" layoutY="112.0" prefHeight="17.0" prefWidth="317.0" text="Take your pictures and save in your laptop directly! Enjoy!" />
    </children>
 </AnchorPane>
