--- a/src/main/resources/view/login.fxml
+++ b/src/main/resources/view/login.fxml
@@ -12,12 +12,12 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="427.0" prefWidth="722.0" style="-fx-background-color: #E9E9E9;" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.LoginController">
    <children>
-      <ImageView fx:id="loginImageImageView" fitHeight="366.0" fitWidth="317.0" layoutX="36.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="loginImageImageView" fitHeight="367.0" fitWidth="335.0" layoutX="13.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../image/loginImage.png" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="361.0" layoutY="15.0" prefHeight="391.0" prefWidth="317.0" style="-fx-background-color: #FFFFFF;" AnchorPane.leftAnchor="361.0">
+      <AnchorPane fx:id="loginForm" layoutX="361.0" layoutY="15.0" prefHeight="391.0" prefWidth="317.0" style="-fx-background-color: #FFFFFF;" AnchorPane.leftAnchor="361.0">
          <children>
             <Label layoutX="118.0" layoutY="6.0" prefHeight="39.0" prefWidth="82.0" text="Log in" textFill="#388e3c">
                <font>
@@ -72,6 +72,14 @@
             <AnchorPane layoutX="6.0" layoutY="157.0" prefHeight="10.0" prefWidth="303.0" style="-fx-background-color: #FFFFFF;" />
          </children>
       </AnchorPane>
-      <Label layoutX="36.0" layoutY="112.0" prefHeight="17.0" prefWidth="317.0" text="Take your pictures and save in your laptop directly! Enjoy!" />
+      <Label layoutX="29.0" layoutY="88.0" prefHeight="19.0" prefWidth="303.0" text="Take your pictures and save in your laptop directly!">
+         <font>
+            <Font size="13.0" />
+         </font></Label>
+      <Label layoutX="160.0" layoutY="107.0" prefHeight="17.0" prefWidth="41.0" text="Enjoy!">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
