--- a/src/main/resources/view/dialog/deleteConfirmationDialog.fxml
+++ b/src/main/resources/view/dialog/deleteConfirmationDialog.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="148.0" prefWidth="479.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.dialogController.DeleteDialogController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="148.0" prefWidth="479.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.dialogController.DeleteDialogController">
    <children>
       <Button fx:id="no_button" layoutX="413.0" layoutY="98.0" mnemonicParsing="false" onMouseClicked="#closeDialogStage" prefHeight="25.0" prefWidth="52.0" style="-fx-background-color: #388e3c; -fx-background-radius: 10; -fx-cursor: hand;" text="NO" textFill="WHITE">
          <font>
@@ -25,8 +25,7 @@
          </image>
       </ImageView>
       <Label layoutX="139.0" layoutY="24.0" prefHeight="32.0" prefWidth="330.0" text="Are you sure you want to move this photo to the Recycle Bin?" />
-      <Label text="Label" />
       <Label fx:id="deletedImageName" layoutX="28.0" layoutY="118.0" prefHeight="17.0" prefWidth="184.0" text="deletedImageName" visible="false" />
-      <Label fx:id="stageName" visible="false" layoutX="172.0" layoutY="118.0" text="stageName" />
+      <Label fx:id="stageName" layoutX="172.0" layoutY="118.0" text="stageName" visible="false" />
    </children>
 </AnchorPane>
