finsh branch slider_download

--- a/src/main/resources/view/main_original.fxml
+++ b/src/main/resources/view/main_original.fxml
@@ -127,6 +127,6 @@
             <fx:include fx:id="cell" source="part/cell.fxml" />
          </center>
       </BorderPane>
-<!--      <fx:include fx:id="slide" source="part/slid.fxml" />-->
+      <fx:include fx:id="slide" source="part/slid.fxml" />
    </children>
 </StackPane>
