--- a/src/main/resources/view/part/recycleBin.fxml
+++ b/src/main/resources/view/part/recycleBin.fxml
@@ -1,50 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="recicleBin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0"
-            prefWidth="906.0"
-            xmlns="http://javafx.com/javafx/8.0.171"
-            fx:controller="sample.controller.RecicleBinController"
-            xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="recicleBin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="906.0" style="-fx-background-color: #fafafa" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.RecycleBinController">
    <children>
       <AnchorPane fx:id="bin_header" layoutX="-1.0" layoutY="-1.0" prefHeight="77.0" prefWidth="906.0">
          <children>
-            <Label layoutX="28.0" layoutY="20.0" prefHeight="38.0" prefWidth="95.0" text="&lt; Back" textFill="#388e3c">
-               <font>
-                  <Font name="System Bold" size="26.0" />
-               </font>
-            </Label>
             <Label layoutX="412.0" layoutY="14.0" prefHeight="27.0" prefWidth="82.0" text="Recycle Bin">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Label layoutX="439.0" layoutY="41.0" prefHeight="21.0" prefWidth="28.0" text="(57)">
+            <Label fx:id="countData" layoutX="439.0" layoutY="41.0" prefHeight="21.0" prefWidth="28.0" text="(57)">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="bin_pagination" layoutY="783.0" prefHeight="56.0" prefWidth="906.0">
-         <children>
-            <Label layoutX="425.0" layoutY="20.0" prefHeight="21.0" prefWidth="17.0" text="1">
+            <Button fx:id="backTomain" layoutX="26.0" layoutY="11.0" mnemonicParsing="false" onMouseClicked="#backToMain" prefHeight="56.0" prefWidth="120.0" style="-fx-background-color: #fafafa; -fx-cursor: hand;" text="&lt; Back" textFill="#388e3c">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="System Bold" size="26.0" />
                </font>
-            </Label>
+            </Button>
          </children>
       </AnchorPane>
-      <ScrollPane fx:id="bin_scroll" layoutX="-1.0" layoutY="76.0" prefHeight="718.0" prefWidth="906.0">
+      <ScrollPane fx:id="bin_scroll" layoutX="-1.0" layoutY="121.0" prefHeight="722.0" prefWidth="906.0" style="-fx-background-color: #fafafa;">
          <content>
-            <FlowPane fx:id="bin_flowPane" prefHeight="716.0" prefWidth="903.0">
+            <FlowPane fx:id="bin_flowPane" prefHeight="708.0" prefWidth="903.0" style="-fx-background-color: #fafafa;">
                <children>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #123;">
                      <FlowPane.margin>
@@ -59,6 +46,18 @@
                </children>
             </FlowPane>
          </content>
+         <padding>
+            <Insets left="15.0" right="15.0" />
+         </padding>
       </ScrollPane>
+      <AnchorPane fx:id="bin_pagination" layoutX="1.0" layoutY="65.0" prefHeight="56.0" prefWidth="906.0">
+         <children>
+<!--            <Label layoutX="425.0" layoutY="20.0" prefHeight="21.0" prefWidth="17.0" text="1">-->
+<!--               <font>-->
+<!--                  <Font name="System Bold" size="12.0" />-->
+<!--               </font>-->
+<!--            </Label>-->
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
