--- a/src/main/resources/view/part/slid.fxml
+++ b/src/main/resources/view/part/slid.fxml
@@ -11,7 +11,10 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="sliderContent" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="906.0" style="-fx-background-color: rgba(0,0,0,0.54) #000000;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.SlideController">
+<AnchorPane fx:id="sliderContent" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="840.0" prefWidth="906.0"
+            style="-fx-background-color: rgba(0,0,0,0.54) #000000;" xmlns="http://javafx.com/javafx/8.0.172-ea"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.SlideController">
    <children>
       <AnchorPane layoutX="62.0" layoutY="44.0" prefHeight="340.0" prefWidth="782.0">
          <children>
@@ -93,14 +96,14 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="rightContent" layoutX="846.0" layoutY="1.0" prefHeight="427.0" prefWidth="60.0">
+      <AnchorPane AnchorPane.rightAnchor="0" fx:id="rightContent" layoutX="846.0" layoutY="1.0" prefHeight="427.0" prefWidth="${sliderContent.width}">
          <children>
-            <Label fx:id="nextLabel" layoutX="12.0" layoutY="153.0" onMouseClicked="#openNextImage" prefHeight="122.0" prefWidth="38.0" style="-fx-cursor: hand;" text="&gt;" textFill="#ededed">
+            <Label  fx:id="nextLabel" layoutX="12.0" layoutY="153.0" onMouseClicked="#openNextImage" prefHeight="122.0" prefWidth="38.0" style="-fx-cursor: hand;" text="&gt;" textFill="#ededed">
                <font>
                   <Font name="System Bold" size="50.0" />
                </font>
             </Label>
-            <Label fx:id="closeLabel" layoutX="16.0" layoutY="9.0" onMouseClicked="#closeSlide" prefHeight="34.0" prefWidth="26.0" style="-fx-cursor: hand;" text="X" textFill="#ededed">
+            <Label  fx:id="closeLabel" layoutX="16.0" layoutY="9.0" onMouseClicked="#closeSlide" prefHeight="34.0" prefWidth="26.0" style="-fx-cursor: hand;" text="X" textFill="#ededed">
                <font>
                   <Font name="System Bold" size="23.0" />
                </font>
