--- a/src/main/resources/view/part/slidOld.fxml
+++ b/src/main/resources/view/part/slidOld.fxml
@@ -96,14 +96,14 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane AnchorPane.rightAnchor="0" fx:id="rightContent" layoutX="846.0" layoutY="1.0" prefHeight="427.0" prefWidth="60.0">
+      <AnchorPane fx:id="rightContent" layoutX="846.0" layoutY="1.0" prefHeight="427.0" prefWidth="60.0">
          <children>
             <Label fx:id="nextLabel" layoutX="12.0" layoutY="153.0" onMouseClicked="#openNextImage" prefHeight="122.0" prefWidth="38.0" style="-fx-cursor: hand;" text="&gt;" textFill="#ededed">
                <font>
                   <Font name="System Bold" size="50.0" />
                </font>
             </Label>
-            <Label  fx:id="closeLabel" layoutX="16.0" layoutY="9.0" onMouseClicked="#closeSlide" prefHeight="34.0" prefWidth="26.0" style="-fx-cursor: hand;" text="X" textFill="#ededed">
+            <Label fx:id="closeLabel" layoutX="16.0" layoutY="9.0" onMouseClicked="#closeSlide" prefHeight="34.0" prefWidth="26.0" style="-fx-cursor: hand;" text="X" textFill="#ededed">
                <font>
                   <Font name="System Bold" size="23.0" />
                </font>
