--- a/src/main/resources/view/part/recycleBin.fxml
+++ b/src/main/resources/view/part/recycleBin.fxml
@@ -8,7 +8,9 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="recicleBin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="906.0" style="-fx-background-color: #fafafa" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.RecycleBinController">
+<AnchorPane fx:id="recicleBin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="840.0" prefWidth="906.0"
+            style="-fx-background-color: #fafafa" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.RecycleBinController">
     <children>
         <AnchorPane fx:id="bin_header" layoutX="-1.0" layoutY="-1.0" prefHeight="77.0" prefWidth="906.0">
             <children>
