--- a/src/main/resources/view/part/recycle.fxml
+++ b/src/main/resources/view/part/recycle.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="recicleBin"
+<AnchorPane fx:id="recicleBin" cache="false"
             maxHeight="-Infinity" maxWidth="-Infinity"
             minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0"
             prefWidth="906.0"
